--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Template</title>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700&amp;subset=latin-ext" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
