--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
         <title>Template</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700&amp;subset=latin-ext" rel="stylesheet">
     </head>
