--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
         <title>Template</title>
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700&amp;subset=latin-ext" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:300i,400,400i,500,700,700i&amp;subset=latin-ext" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
